Removed spellcheck for textarea

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="line">
                 <div class="bracket">></div>
                 <form name="textForm" class="text" onsubmit="return false">
-                    <textarea autofocus  name="inputTextArea" id="inputTextArea" class="nameText" cols="21" rows="5"></textarea>
+                    <textarea autofocus spellcheck="false" name="inputTextArea" id="inputTextArea" class="nameText" cols="21" rows="5"></textarea>
                     <div class="line buttonContainer">
                         <button type="submit" class="btn submitButton text" onclick="reverseTextBox()">Reverse</button>
                     </div>
